--- a/assets/css/pengurus-kelas.css
+++ b/assets/css/pengurus-kelas.css
@@ -6,7 +6,6 @@
 section#pengurus-kelas div.container {
   display: flex;
   flex-wrap: wrap;
-  gap: 0.4em;
 }
 
 section#pengurus-kelas div.container div.card {
@@ -18,6 +17,10 @@ section#pengurus-kelas div.container div.card {
   background: #f0f0f0;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
   transition: all 0.3s;
+}
+
+section#pengurus-kelas div.container div.card:not(:last-child) {
+  margin-right: 0.4em;
 }
 
 section#pengurus-kelas div.container div.card img.card-img-top {
@@ -33,11 +36,35 @@ section#pengurus-kelas div.container div.card div.card-body {
   :root {
     --card-per-row: 3;
   }
+
+  section#pengurus-kelas div.container div.card:not(:nth-child(4n - 1)) {
+    margin-right: 0.4em;
+  }
+
+  section#pengurus-kelas div.container div.card:nth-child(n + 4) {
+    margin-top: 0.4em;
+  }
 }
 
 @media screen and (max-width: 556px) {
   :root {
     --card-per-row: 2;
+  }
+
+  section#pengurus-kelas div.container div.card:nth-child(odd) {
+    margin-right: 0.4em;
+  }
+
+  section#pengurus-kelas div.container div.card:nth-child(even) {
+    margin-right: 0;
+  }
+
+  section#pengurus-kelas div.container div.card:nth-child(n + 3) {
+    margin-top: 0.4em;
+  }
+
+  section#pengurus-kelas div.container div.card:not(:nth-child(n + 3)) {
+    margin-top: 0;
   }
 }
 
@@ -49,6 +76,8 @@ section#pengurus-kelas div.container div.card div.card-body {
 
   section#pengurus-kelas div.container div.card {
     flex-direction: row;
+    margin-right: 0 !important;
+    margin-top: 0.4em !important;
   }
 
   section#pengurus-kelas div.container div.card img.card-img-top {
